@@ -116,6 +116,8 @@ not support
 .BR dirfile_add (3),
 nor
 .BR putdata (3).
+The file extension of the Slim Encoding is
+.BR .slm .
 
 Slimlib has been released under the GPL but, as of the writing of this manual
 page, slimlib is not distributed via the Internet.  Slimlib was written by
